--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<header class="flex">
 			<h1 style=font-family:lobster;>Random Picture Generator</h1>
-			<button>Generate Random Picture</button>
+			<button style="height:80px; width:330px;"><font face=arial size=5><b>Generate Random Picture</b></font></button>
 		</header>
 		<section class="flex">
 			<img src="">
