--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	</head>
 	<body>
 		<header class="flex">
-			<h1 style=font-family:lobster;>Random Picture Generator</h1>
-			<button style="height:80px; width:330px;"><font face=arial size=5><b>Generate Random Picture</b></font></button>
+			<h1 style="font-family:lobster; font-size:50px;">Random Picture Generator</h1>
+<br />			<button style="height:80px; width:330px;"><font face=arial size=5><b>Generate Random Picture</b></font></button>
 		</header>
 		<section class="flex">
 			<img src="">
